[package]
name = "adv-pwd-gen"
version = "0.3.0"
edition = "2021"
license = "Apache 2.0"
authors = ["Rick Pelletier <galiagante@gmail.com>"]
description = "Constraint-based password generator (no adjacent class, no repeats, CSPRNG)"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
thiserror = "1"
